Fix renamed PyPI package

--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,7 @@ pytest-cov = "*"
 pytest-random = "*"
 pytest-catchlog = "*"
 coverage = "~=4.0"
-"coverage.space" = "~=0.8"
+coverage-space = "*"
 mkdocs = "*"
 docutils = "*"
 pygments = "*"
